# ApprovalTests.cpp.Qt.StarterProject

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: github_actions_build.yml
code/: CMakeLists.txt
lib/: ApprovalTests.v.6.0.0.hpp  ApprovalTests.v.8.9.1.hpp  ApprovalTestsQt.hpp  ApprovalTestsQt.v.0.0.0.hpp  ApprovalTestsQt.v.0.0.1.hpp  ApprovalTestsQt.v.0.0.2.hpp  ApprovalTestsQt.v.0.0.3.hpp  CMakeLists.txt
lib/catch2/: CMakeLists.txt
tests/: CMakeLists.txt  Tutorial.cpp  WidgetsTest.cpp  main.cpp
